tests/idris2/error/error034/LetError.idr
blah : Nat
blah =
   let fox : ()
       foo = ()
   in 3
